# tukevejtso

./: .gitignore  LICENSE  README.md
windows/: README.md  codex_cookbook.html  tk.cmd  toolkit.cmd
windows/agents/enchanted-transcription/: Cargo.toml  README.md  agent-instructions.md  install-dependencies.ps1  run.ps1
windows/agents/enchanted-transcription/src/: main.rs
windows/agents/enhanced-typing/: .gitignore  Cargo.toml  README.md  enhanced-typing-agent-instructions.md  run.ps1
windows/agents/enhanced-typing/src/: main.rs
windows/tools/: ansi-color-test.ps1  docker-bash.ps1  docker-cuwacunu-prep.ps1  docker-cuwacunu-shell.ps1  docker-new.ps1  docker-robotics-learning-shell.ps1  install-path.ps1  menu.ps1  open-codex-cookbook.ps1  openai-api-key.ps1  password-manager.ps1  refresh-path.cmd  review-executables.ps1  terminal-transparency.ps1  ui-demo.ps1  ui.ps1  windows-update-reboots.ps1
